--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,20 @@ version = "0.1.0"
 description = ""
 authors = ["Iliya Zhecev <iliya.zhechev@gmail.com>"]
 
+[tool.poetry.scripts]
+data-example = 'document_rectification.data:main'
+
 [tool.poetry.dependencies]
 python = "^3.7"
+torch = "^1.8.1"
+torchvision = "^0.9.1"
+tqdm = "^4.61.0"
+ez-torch = "^0.1.4"
+matplotlib = "^3.4.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+black = {version = "^21.5b2", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
