--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ torchvision = "^0.9.1"
 tqdm = "^4.61.0"
 ez-torch = "^0.1.4"
 matplotlib = "^3.4.2"
+kornia = "^0.5.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
