--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,16 +5,18 @@ description = ""
 authors = ["Iliya Zhecev <iliya.zhechev@gmail.com>"]
 
 [tool.poetry.scripts]
-data-example = 'document_rectification.data:main'
+data = 'document_rectification.data:main'
+train = 'document_rectification.train:main'
 
 [tool.poetry.dependencies]
 python = "^3.7"
 torch = "^1.8.1"
 torchvision = "^0.9.1"
 tqdm = "^4.61.0"
-ez-torch = "^0.1.4"
 matplotlib = "^3.4.2"
 kornia = "^0.5.3"
+pytorch-lightning = "^1.3.4"
+ez-torch = {git = "https://github.com/ichko/ez-torch", rev = "master"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
