--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ kornia = "^0.5.3"
 pytorch-lightning = "^1.3.4"
 ez-torch = {git = "https://github.com/ichko/ez-torch", rev = "master"}
 tensorboard = "2.2"
+wandb = "^0.10.31"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
