--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,8 @@ authors = ["Iliya Zhecev <iliya.zhechev@gmail.com>"]
 [tool.poetry.scripts]
 data = 'document_rectification.data:main'
 train = 'document_rectification.train:main'
-wandb = 'document_rectification.main:run_wandb_local'
-tb = 'document_rectification.main:run_tensorboard_server'
-
+wb_server = 'document_rectification.main:run_wandb_local'
+tb_server = 'document_rectification.main:run_tensorboard_server'
 train_check = 'document_rectification.train:sanity_check'
 
 [tool.poetry.dependencies]
