--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pytorch-lightning = "^1.3.4"
 ez-torch = {git = "https://github.com/ichko/ez-torch", rev = "master"}
 tensorboard = "2.2"
 wandb = "^0.10.31"
+kaggle = "^1.5.12"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
