--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ tqdm = "^4.61.1"
 matplotlib = "^3.4.2"
 kornia = "^0.5.3"
 pytorch-lightning = "^1.3.4"
-ez-torch = {git = "https://github.com/ichko/ez-torch", rev = "master"}
+ez-torch = {git = "https://github.com/ichko/ez-torch", rev = "63bc3b6"}
 tensorboard = "2.2"
 wandb = "^0.10.31"
 kaggle = "^1.5.12"
